add tentativa register

--- a/pokemon services/pokemonservices/pokemon-shop/src/main/resources/templates/pokemon-shop-home.html
+++ b/pokemon services/pokemonservices/pokemon-shop/src/main/resources/templates/pokemon-shop-home.html
@@ -46,7 +46,11 @@
                 <input th:field="*{username}" value="" required type="text" name="username" id="username" class="block w-full rounded-md border-0 py-1.5 pl-7 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" placeholder="Enter your username...">
             </div>
             <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" type="submit" id="submit-btn" onclick="(() => {localStorage.clear()})()">Lessgo</button>
+
         </form>
+        <a th:href="@{/registerpage}" style="display: flex; justify-content: center">
+            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" type="submit">Register</button>
+        </a>
     </div>
 
     <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert"  th:text="${alert}" th:if="${alert == 'User doesnt exist'}"></div>
